--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="wide wow-animation">
   <head>
-    <title>Icon lists</title>
+    <title>Contact Us</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -117,7 +117,7 @@
                           </li>
                         </ul>
                       </li>
-                      <li class="active"><a href="#">Pages</a>
+                      <li><a href="#">Pages</a>
                         <ul class="rd-navbar-megamenu">
                           <li>
                             <h5 class="rd-megamenu-header">Cases</h5>
@@ -177,7 +177,7 @@
                           </li>
                         </ul>
                       </li>
-                      <li><a href="contacts-us.html">Contacts</a>
+                      <li class="active"><a href="contacts-us.html">Contacts</a>
                       </li>
                     </ul>
                   </div>
@@ -187,223 +187,101 @@
           </nav>
         </div>
       </header>
-      <section style="background-image: url(images/bg-image-5.jpg);" class="section-30 section-sm-40 section-md-66 section-lg-bottom-90 bg-gray-dark page-title-wrap">
+      <section style="background-image: url(images/bg-image-8.jpg);" class="section-30 section-sm-40 section-md-66 section-lg-bottom-90 bg-gray-dark page-title-wrap">
         <div class="shell">
           <div class="page-title">
-            <h2>Icon lists</h2>
+            <h2>Contact Us</h2>
           </div>
         </div>
       </section>
 
-      <section class="section-40 section-sm-top-75 section-sm-bottom-50 section-lg-top-90">
+      <div data-zoom="15" data-x="-73.9874068" data-y="40.643180" data-styles="[{&quot;featureType&quot;:&quot;all&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:0},{&quot;hue&quot;:&quot;#e7ecf0&quot;}]},{&quot;featureType&quot;:&quot;road&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-70}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;simplified&quot;},{&quot;saturation&quot;:-60}]}]" class="rd-google-map rd-google-map__model">
+        <ul class="map_locations">
+          <li data-y="40.643180" data-x="-73.9874068">
+            <p>
+              9870 ST VINCENT PLACE,
+              GLASGOW, DC 45 FR 45
+            </p>
+          </li>
+        </ul>
+      </div>
+
+      <section class="section-60 section-sm-top-90 section-sm-bottom-100">
         <div class="shell">
-          <div class="range">
-            <div class="cell-xs-12">
-              <h3 class="text-spacing--30">Lists</h3>
-            </div>
-          </div>
-          <div class="range offset-top-40">
-            <div class="cell-xs-6 cell-sm-4 cell-lg-3">
-              <h5>Unordered List</h5>
-              <ul class="list-marked">
-                <li>Responsive & Retina</li>
-                <li>Extensive docs</li>
-                <li>Powerful Navigation</li>
-                <li>Video Backgrounds</li>
-                <li>Social Plugins</li>
-              </ul>
-            </div>
-            <div class="cell-xs-6 cell-sm-4 cell-lg-3 offset-top-40 offset-xs-top-0">
-              <h5 class="text-spacing--30">Ordered List</h5>
-              <ul class="list-ordered">
-                <li>Responsive & Retina</li>
-                <li>Extensive docs</li>
-                <li>Powerful Navigation</li>
-                <li>Video Backgrounds</li>
-                <li>Social Plugins</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section-40">
-        <div class="shell">
-          <div class="range">
-            <div class="cell-xs-12">
-              <h3 class="text-spacing--30">Icon Left List</h3>
-            </div>
-          </div>
-          <div class="range offset-top-40">
-            <div class="cell-md-9 cell-lg-12">
-              <div class="range">
-                <div class="cell-sm-6 cell-lg-3">
-                  <article class="icon-box-horizontal">
-                    <div class="unit unit-horizontal unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary icon-lg-variant-1 material-icons-phonelink"></span></div>
-                      <div class="unit-body">
-                        <h5 class="prefix-lg-right--10"><a href="#">Edge Technologies</a></h5>
-                        <p class="text-gray-base-05">Our team of professional analysts is constantly roaming the web in search of promising techniques.</p>
+          <div class="range range-md-justify">
+            <div class="cell-md-7 cell-lg-6 offset-top-50 offset-md-top-0">
+              <h3 class="text-spacing--25">Get in Touch</h3>
+              <form data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php" class="rd-mailform form-modern offset-top-30">
+                <div class="range">
+                  <div class="cell-sm-6">
+                    <div class="form-group">
+                      <input id="contact-name" type="text" name="name" data-constraints="@Required" class="form-control">
+                      <label for="contact-name" class="form-label">Name</label>
+                    </div>
+                  </div>
+                  <div class="cell-sm-6 offset-top-30 offset-sm-top-0">
+                    <div class="form-group">
+                      <input id="contact-email" type="email" name="email" data-constraints="@Email @Required" class="form-control">
+                      <label for="contact-email" class="form-label">Email</label>
+                    </div>
+                  </div>
+                  <div class="cell-xs-12 offset-top-30">
+                    <div class="form-group">
+                      <div class="textarea-lined-wrap">
+                        <textarea id="contact-message" name="message" data-constraints="@Required" class="form-control"></textarea>
+                        <label for="contact-message" class="form-label">Message</label>
                       </div>
                     </div>
-                  </article>
-
+                  </div>
+                  <div class="cell-xs-8 offset-top-30 offset-xs-top-30 offset-sm-top-50">
+                    <button type="submit" class="btn btn-primary btn-block">Send</button>
+                  </div>
+                  <div class="cell-xs-4 offset-top-22 offset-xs-top-30 offset-sm-top-50">
+                    <button type="reset" class="btn btn-silver-outline btn-block">Reset</button>
+                  </div>
                 </div>
-                <div class="cell-sm-6 cell-lg-3 offset-top-40 offset-sm-top-0">
-                  <article class="icon-box-horizontal">
-                    <div class="unit unit-horizontal unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary icon-lg material-icons-av_timer"></span></div>
-                      <div class="unit-body">
-                        <h5 class="prefix-lg-right--10"><a href="#">We Value Your Time</a></h5>
-                        <p class="text-gray-base-05">We know how important it is for you to maintain your schedule, that’s why we do everything to fit it. </p>
-                      </div>
-                    </div>
-                  </article>
-
-                </div>
-                <div class="cell-sm-6 cell-lg-3 offset-top-40 offset-lg-top-0">
-                  <article class="icon-box-horizontal">
-                    <div class="unit unit-horizontal unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary icon-lg-variant-1 material-icons-headset_mic"></span></div>
-                      <div class="unit-body">
-                        <h5 class="prefix-lg-right--10"><a href="#">Qualified Support</a></h5>
-                        <p class="text-gray-base-05">Our support team is online 24/7, and is ready to help you with any design-related issue.</p>
-                      </div>
-                    </div>
-                  </article>
-
-                </div>
-                <div class="cell-sm-6 cell-lg-3 offset-top-40 offset-lg-top-0">
-                  <article class="icon-box-horizontal">
-                    <div class="unit unit-horizontal unit-spacing-md">
-                      <div class="unit-left"><span class="icon icon-primary icon-lg material-icons-av_timer"></span></div>
-                      <div class="unit-body">
-                        <h5 class="prefix-lg-right--10"><a href="#">Made for Speed</a></h5>
-                        <p class="text-gray-base-05">We know how embarassing and time-consuming content loading can be.</p>
-                      </div>
-                    </div>
-                  </article>
-
+              </form>
+            </div>
+            <div class="cell-md-5 cell-lg-4 offset-top-60 offset-md-top-0">
+              <div class="inset-md-right-15 inset-lg-right-0">
+                <div class="range">
+                  <div class="cell-sm-10 cell-md-12">
+                    <h3 class="text-spacing--25">How to Find Us</h3>
+                    <p class="offset-md-top-40 text-gray-base">
+                      If you have any questions, just fill in the contact form, and we will answer you shortly. If you are living nearby, come visit AllRisk at one of our comfortable offices.
+                      
+                    </p>
+                  </div>
+                  <div class="cell-sm-6 cell-md-12 offset-top-30 offset-sm-top-45">
+                    <h5 class="text-spacing--25">Headquarters</h5>
+                    <address class="contact-info">
+                      <p class="text-uppercase text-gray-base">9863 - 9867 MILL ROAD, CAMBRIDGE, MG09 99HT.</p>
+                      <dl class="list-terms-inline">
+                        <dt>Telephone</dt>
+                        <dd><a href="callto:#" class="link-gray-base">+1 800 603 6035</a></dd>
+                      </dl>
+                      <dl class="list-terms-inline">
+                        <dt>E-mail</dt>
+                        <dd><a href="mailto:#" class="link-primary">mail@demolink.org</a></dd>
+                      </dl>
+                    </address>
+                  </div>
+                  <div class="cell-sm-6 cell-md-12 offset-top-30 offset-sm-top-45 offset-md-top-30">
+                    <h5 class="text-spacing--25">Support Centre</h5>
+                    <address class="contact-info">
+                      <p class="text-uppercase text-gray-base">9870 ST VINCENT PLACE, GLASGOW, DC 45 FR 45</p>
+                      <dl class="list-terms-inline">
+                        <dt>Telephone</dt>
+                        <dd><a href="callto:#" class="link-gray-base">+1 800 603 6035</a></dd>
+                      </dl>
+                      <dl class="list-terms-inline">
+                        <dt>E-mail</dt>
+                        <dd><a href="mailto:#" class="link-primary">mail@demolink.org</a></dd>
+                      </dl>
+                    </address>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section-50">
-        <div class="shell">
-          <div class="range">
-            <div class="cell-xs-12">
-              <h3 class="text-spacing--30">Icon Top List</h3>
-            </div>
-          </div>
-          <div class="range offset-top-30">
-            <div class="cell-md-9 cell-lg-12">
-              <div class="range">
-                <div class="cell-xs-6 cell-lg-3">
-                  <article class="icon-box-vertical">
-                    <div class="unit unit-vertical unit-spacing-sm">
-                      <div class="unit-left"><span class="icon icon-primary icon-md material-icons-phonelink"></span></div>
-                      <div class="unit-body">
-                        <h5>Responsive &amp; Retina</h5>
-                        <p class="text-gray-base-05">AllRisk looks simply great on any screen resolution. All images are responsive and ultra sharp.</p>
-                      </div>
-                    </div>
-                  </article>
-
-                </div>
-                <div class="cell-xs-6 cell-lg-3 offset-top-50 offset-xs-top-0">
-                  <article class="icon-box-vertical">
-                    <div class="unit unit-vertical unit-spacing-sm">
-                      <div class="unit-left"><span class="icon icon-primary icon-md material-icons-library_books"></span></div>
-                      <div class="unit-body">
-                        <h5>Extensive docs</h5>
-                        <p class="text-gray-base-05">AllRisk has online and easily accesible documentation. Our documentation contains detailed instructions for further template customization and self adaptation.</p>
-                      </div>
-                    </div>
-                  </article>
-
-                </div>
-                <div class="cell-xs-6 cell-lg-3 offset-top-50 offset-lg-top-0">
-                  <article class="icon-box-vertical">
-                    <div class="unit unit-vertical unit-spacing-sm">
-                      <div class="unit-left"><span class="icon icon-primary icon-md material-icons-videocam"></span></div>
-                      <div class="unit-body">
-                        <h5>Video Backgrounds</h5>
-                        <p class="text-gray-base-05">Our templates are enabled with captivating video background, an option which can transform any website into esthetically appealing one.</p>
-                      </div>
-                    </div>
-                  </article>
-
-                </div>
-                <div class="cell-xs-6 cell-lg-3 offset-top-50 offset-lg-top-0">
-                  <article class="icon-box-vertical">
-                    <div class="unit unit-vertical unit-spacing-sm">
-                      <div class="unit-left"><span class="icon icon-primary icon-md material-icons-open_with"></span></div>
-                      <div class="unit-body">
-                        <h5>Powerful Navigation</h5>
-                        <p class="text-gray-base-05">Powerful and really flexible RD Navbar plugin is included too. Create any type of navigation with our ready-to-go examples and adapt them to your needs.</p>
-                      </div>
-                    </div>
-                  </article>
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section-top-35 section-bottom-60 section-sm-bottom-100">
-        <div class="shell">
-          <div class="range">
-            <div class="cell-xs-12">
-              <h3 class="text-spacing--30">Icon Box</h3>
-            </div>
-          </div>
-          <div class="range offset-top-40 offset-lg-top-50">
-            <div class="cell-sm-6 cell-md-4 height-fill">
-              <article class="icon-box">
-                <div class="box-top">
-                  <div class="box-icon"><span class="icon icon-primary icon-lg-variant-2 material-icons-device_hub"></span></div>
-                  <div class="box-header">
-                    <h5><a href="#">Social Integration</a></h5>
-                  </div>
-                </div>
-                <div class="divider"></div>
-                <div class="box-body">
-                  <p class="text-gray-base-05">AllRisk has full set of social icons and styling options which allow you to share any content.</p>
-                </div>
-              </article>
-            </div>
-            <div class="cell-sm-6 cell-md-4 height-fill offset-top-40 offset-sm-top-0">
-              <article class="icon-box">
-                <div class="box-top">
-                  <div class="box-icon"><span class="icon icon-primary icon-md material-icons-filter"></span></div>
-                  <div class="box-header">
-                    <h5><a href="#">Parallax Effects</a></h5>
-                  </div>
-                </div>
-                <div class="divider"></div>
-                <div class="box-body">
-                  <p class="text-gray-base-05">Everyone loves parallax scrolling effects, they are simply beautiful. AllRisk has advanced parallax options </p>
-                </div>
-              </article>
-            </div>
-            <div class="cell-sm-6 cell-md-4 height-fill offset-top-40 offset-md-top-0">
-              <article class="icon-box">
-                <div class="box-top">
-                  <div class="box-icon"><span class="icon icon-primary icon-md material-icons-build"></span></div>
-                  <div class="box-header">
-                    <h5><a href="#">Extended Toolkit</a></h5>
-                  </div>
-                </div>
-                <div class="divider"></div>
-                <div class="box-body">
-                  <p class="text-gray-base-05">AllRisk provides a poweful and flexible exntended toolkit in addition to basic Bootsrap. </p>
-                </div>
-              </article>
             </div>
           </div>
         </div>
