--- a/SeguridadElectrica.html
+++ b/SeguridadElectrica.html
@@ -50,11 +50,11 @@
                       </li>
                       <li><a href="#">Servicios</a>
                         <ul class="rd-navbar-dropdown">
-                          <li><a href="Proyectos.html">Proyectos Electromecánicos </a>
+                          <li><a href="Electromecanicos.html">Proyectos Electromecánicos </a>
                           </li>
-                          <li><a href="Proyectos.html">Seguridad Eléctrica</a>
+                          <li><a href="SeguridadElectrica.html">Seguridad Eléctrica</a>
                           </li>
-                          <li><a href="Proyectos.html">Eficiencia Energética</a>
+                          <li><a href="EficienciaEnergetica.html">Eficiencia Energética</a>
                         </ul>
                       </li>
                       <li><a href="Proyectos.html">Nuestros Proyectos</a>
@@ -146,58 +146,45 @@
         </div>
       </section>
 
-      <section class="section-40 section-sm-75 bg-cello">
-        <div class="shell">
-          <div class="range range-xs-center">
-            <div class="cell-xs-9 cell-sm-11 cell-lg-12">
-              <div class="range">
-                <div class="cell-sm-6 cell-md-4 cell-lg-3 offset-top-50 offset-lg-top-0">
-                  <h6 class="h6">Contactos</h6>
-                  <address class="contact-info offset-top-22 offset-md-top-30 offset-lg-top-35 text-left">
-                    <div class="unit unit-horizontal unit-spacing-md unit-middle">
-                      <div class="unit-left"><span class="icon icon-xs icon-primary material-icons-phone"></span></div>
-                      <div class="unit-body"><a href="callto:#" class="link-white">+54 9 117 365 1938</a></div>
-                    </div>
-                    <div class="unit unit-horizontal unit-spacing-md unit-middle offset-top-15">
-                      <div class="unit-left"><span class="icon icon-xs icon-primary fa fa-envelope-o"></span></div>
-                      <div class="unit-body"><a href="mailto:#" class="link-white">info@boatech.com.ar</a></div>
-                    </div>
-                    <div class="">
-                    <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1399653981184!2d-58.424221484365745!3d-34.60062206484219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca6369438bf1%3A0x24faa64733020e5f!2sGuardia%20Vieja%204090%2C%20C1192AAP%20CABA!5e0!3m2!1ses-419!2sar!4v1652302024527!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                  </div>
-                  </address>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      
 <!-- COMIENZA FOOTER -->
-      <footer class="page-foot bg-cello">
-        <div class="shell">
-          <hr class="divider-bismark-04">
-        </div>
-        <section class="section-35">
-          <div class="shell text-center">
-            <div class="range range-sm-reverse range-sm-justify range-sm-middle">
-              <div class="cell-sm-6 text-sm-right">
-                <div class="group-sm group-middle">
-                  <p class="text-italic text-white">Seguinos:</p>
-                  <ul class="list-inline list-inline-reset">
-                    <li><a href="#" class="icon icon-circle icon-blue-bayoux icon-xxs-smallest fa fa-facebook"></a></li>
-                    <li><a href="#" class="icon icon-circle icon-blue-bayoux icon-xxs-smallest fa fa-twitter"></a></li>
-                    <li><a href="#" class="icon icon-circle icon-blue-bayoux icon-xxs-smallest fa fa-whatsapp"></a></li>
-                  </ul>
+<footer class="page-foot bg-cello">
+  <section class="section-40 section-sm-75 bg-cello">
+    <div class="shell">
+      <div class="range range-xs-center">
+        <div class="cell-xs-9 cell-sm-11 cell-lg-12">
+          <div class="range">
+            <div class="cell-sm-6 cell-md-4 cell-lg-3 offset-top-50 offset-lg-top-0">
+              <h6 class="h6">Contactos</h6>
+              <address class="contact-info offset-top-22 offset-md-top-30 offset-lg-top-35 text-left">
+                <div class="unit unit-horizontal unit-spacing-md unit-middle">
+                  <div class="unit-left"><span class="icon icon-xs icon-primary material-icons-phone"></span></div>
+                  <div class="unit-body"><a href="callto:#" class="link-white">+54 9 117 365 1938</a></div>
                 </div>
-              </div>
-              <div class="cell-sm-6 offset-top-15 offset-sm-top-0 text-sm-left">
-                <p class="rights text-white"><span id="copyright-year"></span><span>&nbsp;&#169;&nbsp;</span><span>boatech.&nbsp;</span><a href="privacy.html" class="link-white-v2">Privacy Policy</a>
-                </p>
-              </div>
+                <div class="unit unit-horizontal unit-spacing-md unit-middle offset-top-15">
+                  <div class="unit-left"><span class="icon icon-xs icon-primary fa fa-envelope-o"></span></div>
+                  <div class="unit-body"><a href="mailto:#" class="link-white">info@boatech.com.ar</a></div>
+                </div>
+                <div class="cell-sm-6 text-sm-right">
+                  <div class="group-sm group-middle">
+                    <p class="text-italic text-white">Seguinos:</p>
+                    <ul class="list-inline list-inline-reset">
+                      <li><a href="#" class="icon icon-circle icon-blue-bayoux icon-xxs-smallest fa fa-facebook"></a></li>
+                      <li><a href="#" class="icon icon-circle icon-blue-bayoux icon-xxs-smallest fa fa-twitter"></a></li>
+                      <li><a href="#" class="icon icon-circle icon-blue-bayoux icon-xxs-smallest fa fa-whatsapp"></a></li>
+                    </ul>
+                  </div>
+              </address>
             </div>
           </div>
-        </section>
-      </footer>
+        </div>
+      </div>
+    </div>
+    <div class="grid-footer">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.139965398104!2d-58.42422148422888!3d-34.60062206484257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca6369438bf1%3A0x24faa64733020e5f!2sGuardia%20Vieja%204090%2C%20C1192AAP%20CABA!5e0!3m2!1ses-419!2sar!4v1652395199072!5m2!1ses-419!2sar" width="1200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  </section>
+</footer>
 <!--  TERMINA FOOTER -->
     </div>
     <div id="form-output-global" class="snackbars"></div>
